--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.username=${DATABASE_USER}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+server.port=8082
